[package]
authors = ["Magnus Bergmark <magnus.bergmark@gmail.com>"]
name = "git-trivia"
version = "0.1.0"

[dependencies]
clap = "2.26.2"
error-chain = "0.11.0"
git2 = "0.6.8"
indicatif = "0.7.0"
prettytable-rs = "0.6.7"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
serde_yaml = "0.7.1"
term = "0.4.6"
terminal_size = "0.1.7"
